# binary-classification-mlops

./: Dockerfile.dashboard  mlflow.db  pyproject.toml
.history/: .dockerignore_20260106000318  .dockerignore_20260106001801  .gitignore_20260106000324  Dockerfile_20260106000343.api  Dockerfile_20260106000359.dashboard  Dockerfile_20260106001338.api  Dockerfile_20260106001352.dashboard  Dockerfile_20260106001828.api  docker-compose_20260106000417.yml  docker-compose_20260106003227.yml  docker-compose_20260106003354.yml  docker-compose_20260106003402.yml  docker-compose_20260106004552.yml  pyproject_20260106001454.toml  pyproject_20260106001750.toml  requirements_20260101223908.txt
.history/feature_repo/: feature_definition_20260105232027.py  feature_store_20260105232032.py  feature_views_20260105232021.yaml
.history/src/api/: main_20260105231726.py  router_20260105231720.py
.history/src/config/: settings_20260105231259.py
.history/src/dashboard/: app_20260105232129.py  utils_20260105232115.py
.history/src/data/: preprocess_20260105231350.py
.history/src/evaluation/: drift_20260105231416.py  (+1 more)
.history/tests/: conftest_20260105232248.py  conftest_20260105234025.py
notebooks/: 01_inspect.ipynb  02_eda.ipynb  03_eda.ipynb  4.2.0
src/api/: dependencies.py  router.py  schemas.py
src/data/: load_local.py
src/evaluation/: plots.py
src/pipelines/: monitoring_pipeline.py  training_pipeline.py
src/utils/: io_utils.py
tests/: conftest.py
tests/integration/: test_api_e2e.py
tests/smoke/: test_smoke_api.py
tests/unit/: test_load_local.py
(+11 files in other folders)
