# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-classification-mlops"
version = "0.1.0"
description = "Binary classification MLOps project (training + FastAPI + Streamlit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Bala Kamesh M" }
]

dependencies = [
  # Core
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",
  "joblib>=1.3.0",

  # IMPORTANT: pin sklearn to avoid model pickle mismatch between local & docker
  "scikit-learn==1.4.1.post1",

  # Experiment tracking / tuning
  "mlflow>=2.10.0",
  "optuna>=3.6.0",

  # Config / logging helpers commonly used in projects like this
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0"
]

dashboard = [
  "streamlit>=1.31.0",
  "requests>=2.31.0"
]

dev = [
  "pytest>=8.1.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0"
]

# Tell setuptools to treat ./src as the package root and to discover packages under it
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

# Pytest config (keeps imports stable even when running from repo root)
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
